--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>this is a Local Repo paragraph</p>
-    <p>this is a feature paragraph</p>
+    <p>this is a feature paragraph (button)</p>
 </body>
 </html>
